package modelo;

public interface IEncriptable {
    void encriptar(); //Modifica el objeto
    String desencriptar(); //Devuelve el objeto encriptado
}